@@ -39,6 +39,7 @@ enum gdb_osabi
   GDB_OSABI_WINCE,
   GDB_OSABI_GO32,
   GDB_OSABI_NETWARE,
+  GDB_OSABI_IRIX,
   GDB_OSABI_LYNXOS,
 
   GDB_OSABI_ARM_EABI_V1,
